[package]
name = "neuralneat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
petgraph = { version = "0.6.3", features = ["serde-1"] }
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

[lib]
name = "neuralneat"
path = "src/lib.rs"
