[package]
name = "neuralneat"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Ben Hearsum <ben@hearsum.ca>"]
description = "An implementation of Kenneth Stanley's NeuroEvolution of Augmenting Topologies"
homepage = "https://github.com/bhearsum/neuralneat"
repository = "https://github.com/bhearsum/neuralneat"
documentation = "https://docs.rs/neuralneat"
readme = "README.md"
keywords = ["neuralnetwork", "machinelearning"]
categories = ["science"]
exclude = [".gitignore", ".github/*"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
petgraph = { version = "0.6.3", features = ["serde-1"] }
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
